# wodoo

./: .gitignore  README.md  READMECN.md  ZFS.md  gimera.yml  setup.cfg  setup.py
.github/workflows/: pypi.yml
tools/dtreetrawl/: .gitignore  Makefile  README.md  dtreetrawl.c  dtreetrawl.h
wodoo/: __init__.py  consts.py  defaults  lib_composer.py  lib_db.py  lib_setup.py  lib_setup.py.LOCAL  lib_src.py  module_tools.py  program_settings.py  requirements.txt  testzfs.sh  tools.py
wodoo/extra_install/asterisk_customs/connector_mqtt_asterisk/: Dockerfile
wodoo/extra_install/asterisk_customs/docker-freepbx/: Dockerfile
wodoo/tests/: test_base.py
