[metadata]
name = wodoo
version = 0.3.16
description-file = README.md
DESCRIPTION = Odoo Framework
URL = https://gitee.com/odoochain/wodoo
EMAIL = info@odoochain.cn
AUTHOR = Marc-Christian Wimmer,Odoo Chain
license=MIT

[options]
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    odoo = wodoo:cli
